# SIMEIS

./: .gitignore  Cargo.toml  Dockerfile.client  IDEA.md  Makefile  README.md  TODO.md  economy.ods  flake.nix
.forgejo/: functests.py  generate_swagger.py  scripts.nix
.forgejo/workflows/: ci.yaml
.github/: CODEOWNERS  Dockerfile  issue_template.md  pull_request_template.md
.github/workflows/: build-matrix.yml  ci.yml  dependabot-update.yml  heavy-tests.yml  pr-release-check.yml  pr-tests.yml  propagate-bug.yml  quality.yml  release-analysis.yml  release.yml  todo-check.yml
.swagger/: swagger-initializer.js
doc/: .old_manual.typ  apiref.typ  generate.py  manual.typ  swagger-ui.html  swagger.json
example/: bigtest.sh  client.py  sdk.py  watch_game.py
example/python/: client.py
example/rust/: Cargo.toml
packaging/debian/: control  postinst  prerm  simeis-server.8  simeis-server.service
sdk/: python.py  script.py  sk.json  sk2.json  sk3.json
sdk/rust/: Cargo.toml
simeis-data/: Cargo.toml
simeis-data/src/: crew.rs  errors.rs  galaxy.rs  game.rs  industry.rs  lib.rs  market.rs  player.rs  ship.rs  syslog.rs  tests.rs
simeis-server/: Cargo.toml
simeis-server/src/: api.rs  crew.rs  game.rs  main.rs  player.rs  station.rs
simeis-server/src/api/: crew.rs  industry.rs  market.rs  player.rs  ship.rs  shipyard.rs  station.rs  station_shop.rs  system.rs
src/: api.rs  errors.rs  galaxy.rs  game.rs  main.rs  nav.rs  player.rs  ship.rs  tests.rs
src/galaxy/: station.rs
tests/: functional_tests.py  propertybased.py  propertybased.rs
(+15 files in other folders)
